- Correct indenting of new threading macros, as-> cond-> some->. Fix Issue #554
- `F3 Navigate to Definition` was not working for single segment namespaces. Fix Issue #572 (Thanks isto.nikula for the patch!)
- Upgraded missing dependency on `ccw.server 0.1.1` which is where the fix for Code Completion not succeeding sometimes is located!
- `Outline View`: There were unexpected exceptions thrown depending on the content of the Editor. These were due to `java.lang.Comparator` contract violations. Fix Issue #639

== Changes between Counterclockwise 0.25.1 and 0.25.2

`0.25.2` released on May 17, 2014

=== Bug fixes

- Upgraded dependency on `ccw.server 0.1.1` which is where the fix for Code Completion not succeeding sometimes is located!

== Changes between Counterclockwise 0.25.0 and 0.25.1

`0.25.1` released on May 17, 2014

=== Explicitly running leiningen headless
When Preference `Clojure` > `General` > `Launch Leiningen projects with Leiningen` is unchecked, then `Run as` for the project will use the Eclipse Project Settings, not the Leiningen project settings. And Leiningen will not be used to launch the project. +
But still, users have reported that there is a need for a command for explicitly launching the project via Leiningen.

Thus the "Headless Leiningen REPL" command has been resurrected. You can find it in the Leiningen contextual menu, or invoke it via the kbd:[Alt+L H] Keyboard Shortcut.

=== Bug fixes

- Error on load file in REPL, due to spaces in path introduced in 0.25.0. Thank you alzadude for the Pull Request!
- Project wizard issue if you (only) unselect the default location checkbox. Fix Issue #637
- Code Completion would not succeed sometimes and NullPointerExceptions would be logged instead. Fix Issue #631

== Changes between Counterclockwise 0.24.2 and 0.25.0

`0.25.0` released on April 25, 2014

Counterclockwise now uses Clojure 1.6.0 internally instead of 1.6.0-alpha3 before.

=== Launch startup time
